--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>hw-11</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <form class="form">
+        <label class="serch-field">
+          <input
+            class="search-input"
+            type="text"
+            name="serch"
+            placeholder="Search images..."
+            required
+          />
+        </label>
+        <button class="search-btn" type="submit">Search</button>
+      </form>
+      <div class="loader-div hidden">
+        <span class="loader"></span>
+      </div>
+      <ul class="gallery"></ul>
     </main>
-
-    <load src="./partials/footer.html" />
-
     <script type="module" src="./main.js"></script>
   </body>
 </html>
