--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hw-11</title>
+    <title>hw-12</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -24,6 +24,7 @@
         <span class="loader"></span>
       </div>
       <ul class="gallery"></ul>
+      <button class="search-btn more-search" type="button">Load more</button>
     </main>
     <script type="module" src="./main.js"></script>
   </body>
